force-app/main/default/objects/Franchise_Brand__c/Franchise_Brand__c.object-meta.xml
<CustomObject>
    <description>Franchise Brand</description>
    <label>Franchise Brand</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Franchise Brands</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>