force-app/main/default/objects/Franchise_Brand__c/fields/Brand_Code__c.field-meta.xml
<CustomField>
    <fullName>Brand_Code__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Code</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Brand Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>