force-app/main/default/objects/Franchise_Brand__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <defaultValue>false</defaultValue>
    <description>Is Active</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>