force-app/main/default/objects/Franchise_Brand__c/fields/Panel_Brand__c.field-meta.xml
<CustomField>
    <fullName>Panel_Brand__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <defaultValue>false</defaultValue>
    <description>Is Panel Brand</description>
    <label>Panel Brand</label>
    <type>Checkbox</type>
</CustomField>